[tool.poetry]
name = "athome-bot"
version = "0.3.0"
description = ""
authors = ["StanisLove <sta-tun-slav@yandex.ru>"]
readme = "README.md"
packages = [{include = "./src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
typer = "^0.7.0"
pymongo = "^4.3.3"
python-dotenv = "^0.21.1"
dramatiq = "^1.14.0"
redis = "^4.5.1"

[tool.poetry.scripts]
start = "src.main:run"
setup_db = "src.db.postgresql:setup_db"
test_dramatiq = "src.tasks:run"
get_weather = "src.func.info:get_weather"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
